k8s-235/apps/awx/overlays/prod/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: awx
  labels:
    prometheus: k8s
